# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- Ensembl GenomIO project configuration

## Generic configuration
[project]
name = "ensembl-genomio"
dynamic = [
    "version",
]
requires-python = ">= 3.8"
description = "Ensembl GenomIO -- pipelines to convert basic genomic data into Ensembl cores and back to flatfile"
readme = "README.md"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}
keywords = [
    "genome_io",
    "ensembl",
    "bioinformatics",
    "annotation",
    "setup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "argschema >= 3.0.4",
    "bcbio-gff == 0.6.7",
    "biopython == 1.80",
    "jsonschema >= 4.6.0",
    "intervaltree >= 3.1.0",
    "mysql-connector-python >= 8.0.29",
    "python-redmine >= 2.3.0",
    "requests >= 2.28.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ensembl-py @ git+https://github.com/Ensembl/ensembl-py.git",
    "mock",
    "mypy",
    "pylint",
    "pytest",
    "Sphinx",
    "types-requests",
]
doc = [
    "mock",
    "Sphinx",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ensembl-genomio"

[project.scripts]
json_schema_factory = "ensembl.io.genomio.schemas.json_schema_factory:main"
check_json_schema = "ensembl.io.genomio.schemas.json_schema_validator:main"
download_genbank = "ensembl.io.genomio.download_genbank:main"
extract_from_gb = "ensembl.io.genomio.extract_from_gb:main"
process_gff3 = "ensembl.io.genomio.process_gff3:main"
manifest_maker = "ensembl.io.genomio.manifest_maker:main"
check_integrity = "ensembl.io.genomio.integrity:main"
manifest_stats = "ensembl.io.genomio.manifest_stats:main"
db_factory = "ensembl.io.genomio.db_factory:main"
seq_region_dumper = "ensembl.io.genomio.seq_region_dumper:main"
events_dumper = "ensembl.io.genomio.events_dumper:main"
events_loader = "ensembl.io.genomio.events_loader:main"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.dynamic]
version = {attr = "ensembl.io.genomio.__version__"}

[tool.setuptools.packages.find]
where = ["src/python"]  # list of folders that contain the packages (["."] by default)

# For additional information on `setuptools` configuration see:
#    https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#    https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#    https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import",
]

[tool.mypy]
mypy_path = "src/python"
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --tb=native --server=sqlite:///"
testpaths = ["src/python/tests"]
norecursedirs = ["data", "docs", "*.egg_info"]
filterwarnings = [
    "ignore::DeprecationWarning:argschema",
]

[tool.coverage.run]
branch = true
source = [
    "src/python/ensembl"
]
