# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- Ensembl GenomIO project configuration

## Generic configuration
[project]
name = "ensembl-genomio"
dynamic = [
    "version",
]
requires-python = ">= 3.8"
description = "Ensembl GenomIO -- pipelines to convert basic genomic data into Ensembl cores and back to flatfile"
readme = "README.md"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}
keywords = [
    "genome_io",
    "ensembl",
    "bioinformatics",
    "annotation",
    "setup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bcbio-gff == 0.7.0",
    "biopython == 1.81",
    "ensembl-hive @ git+https://github.com/Ensembl/ensembl-hive.git",
    "jsonschema >= 4.6.0",
    "importlib_resources",  # not needed from Python 3.9+
    "intervaltree >= 3.1.0",
    "mysql-connector-python >= 8.0.29",
    "python-redmine >= 2.3.0",
    "requests >= 2.28.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "ensembl-py @ git+https://github.com/Ensembl/ensembl-py.git",
    "genbadge[coverage]",
    "mock",
    "mypy",
    "pylint",
    "pytest",
    "pytest-workflow",
    "Sphinx",
    "types-requests",
]
doc = [
    "mock",
    "Sphinx",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ensembl-genomio"

[project.scripts]
# Download
retrieve_assembly_data = "ensembl.io.genomio.assembly.get_assembly_data:main"
# Genbank
extract_from_gb = "ensembl.io.genomio.genbank.extract_from_genbank:main"
download_genbank = "ensembl.io.genomio.genbank.get_genbank:main"
# Prepare
amend_genomic_data = "ensembl.io.genomio.metadata.update_genome_metadata:main"
prep_fasta_data = "ensembl.io.genomio.fastaprep.process_fasta:main"
prepare_genome_metadata = "ensembl.io.genomio.metadata.prepare_genome:main"
prepare_seq_region = "ensembl.io.genomio.metadata.prepare_seq_region:main"
process_gff3 = "ensembl.io.genomio.gff3.process_gff3:main"
# Schema
check_json_schema = "ensembl.io.genomio.schemas.json_schema_validator:main"
json_schema_factory = "ensembl.io.genomio.schemas.json_schema_factory:main"
# Utils
extract_file = "ensembl.io.genomio.utils.archive_utils:extract_file_cli"
# Manifest
check_integrity = "ensembl.io.genomio.integrity:main"
manifest_maker = "ensembl.io.genomio.manifest_maker:main"
manifest_stats = "ensembl.io.genomio.manifest_stats:main"
# DB
db_factory = "ensembl.io.genomio.db_factory:main"
# Dump
seq_region_dumper = "ensembl.io.genomio.seq_region_dumper:main"
genome_meta_dumper = "ensembl.io.genomio.genome_metadata.dump_genome_metadata:main"
genome_stats_dumper = "ensembl.io.genomio.genome_metadata.dump_genome_stats:main"
genome_stats_compare = "ensembl.io.genomio.genome_metadata.compare_genome_stats:main"
# Events
events_dumper = "ensembl.io.genomio.events_dumper:main"
events_loader = "ensembl.io.genomio.events_loader:main"
format_events = "ensembl.io.genomio.events.format_events:main"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.dynamic]
version = {attr = "ensembl.io.genomio.__version__"}

[tool.setuptools.packages.find]
where = ["src/python"]  # list of folders that contain the packages (["."] by default)

# For additional information on `setuptools` configuration see:
#    https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#    https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#    https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "logging-fstring-interpolation",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import",
]
max-attributes = 12

[tool.mypy]
mypy_path = "src/python"
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --tb=native --server=sqlite:///"
testpaths = ["src/python/tests"]
norecursedirs = ["data", "docs", "*.egg_info"]

[tool.coverage.run]
branch = true
source = [
    "ensembl.io.genomio",
]

[tool.coverage.report]
exclude_lines = [
    # Do not complain about missing debug-only code
    "def __repr__",
    "if self\\.debug",
    # Do not complain if tests do not hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    # Do not complain if non-runnable code is not run
    "if __name__ == .__main__.:",
    "def main",
    # Do not complain about abstract methods, they are not run
    "@(abc\\.)?abstractmethod",
]
