[metadata]
name = ensembl-genomio
version = file: VERSION
description = Ensembl Genome IO
long_description = file: README.md
author = Ensembl
author_email = dev@ensembl.org
license = Apache License 2.0
url = https://www.ensembl.org
download_url = https://github.com/Ensembl/ensembl-genomio
classifiers = file: CLASSIFIERS

[options]
python_requires = >= 3.7
install_requires = 
    bcbio-gff
    biopython
    jsonschema
    mysql-connector-python
    requests
    python-redmine
include_package_data = True
package_dir =
    = lib/python
packages = find:

[options.packages.find]
where = lib/python
